--- a/index.html
+++ b/index.html
@@ -3,85 +3,64 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Bem-vindo ao Mini App</title>
+<title>Bem-vindo ao Jogo de Plataforma</title>
 <style>
-    /* Reset simples */
-    * { margin:0; padding:0; box-sizing:border-box; }
+* { margin:0; padding:0; box-sizing:border-box; }
+body, html { width:100%; height:100%; font-family:Arial,sans-serif; overflow:hidden; background:#121212; color:white; display:flex; justify-content:center; align-items:center; position:relative; }
 
-    body {
-        font-family: Arial, Helvetica, sans-serif;
-        height: 100vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background: linear-gradient(135deg, #27ae60, #2ecc71);
-        color: white;
-        overflow: hidden;
-    }
+canvas { position:absolute; top:0; left:0; width:100%; height:100%; z-index:0; }
 
-    .container {
-        text-align: center;
-        animation: fadeIn 1s ease-out;
-    }
+.container { position:relative; z-index:1; text-align:center; }
 
-    h1 {
-        font-size: 3rem;
-        margin-bottom: 20px;
-        animation: slideDown 1s ease-out;
-    }
+h1 { font-size:3rem; margin-bottom:20px; overflow:hidden; border-right:.15em solid orange; white-space:nowrap; animation: typing 3s steps(30,end), blink .75s step-end infinite; }
 
-    p {
-        font-size: 1.2rem;
-        margin-bottom: 30px;
-        animation: slideUp 1s ease-out;
-    }
+#entrar { display:none; margin-top:20px; padding:12px 30px; font-size:18px; border:none; border-radius:8px; background:#ff6600; color:white; cursor:pointer; font-weight:bold; box-shadow:0 0 10px #ff6600,0 0 20px #ff6600; animation:pulse 1.5s infinite alternate; }
 
-    button {
-        padding: 12px 30px;
-        font-size: 18px;
-        border: none;
-        border-radius: 8px;
-        background: white;
-        color: #27ae60;
-        cursor: pointer;
-        font-weight: bold;
-        transition: all 0.3s;
-    }
+#entrar:hover { transform:scale(1.05); box-shadow:0 0 20px #ff9933,0 0 30px #ff9933; }
 
-    button:hover {
-        transform: scale(1.05);
-        background: #f0f0f0;
-    }
-
-    @keyframes fadeIn {
-        from { opacity: 0; }
-        to { opacity: 1; }
-    }
-
-    @keyframes slideDown {
-        from { opacity: 0; transform: translateY(-50px);}
-        to { opacity: 1; transform: translateY(0);}
-    }
-
-    @keyframes slideUp {
-        from { opacity: 0; transform: translateY(50px);}
-        to { opacity: 1; transform: translateY(0);}
-    }
+@keyframes typing { from {width:0;} to {width:100%;} }
+@keyframes blink { 50% { border-color:transparent; } }
+@keyframes pulse { from { box-shadow:0 0 10px #ff6600,0 0 20px #ff6600; } to { box-shadow:0 0 20px #ff9933,0 0 30px #ff9933; } }
 </style>
 </head>
 <body>
 
+<canvas id="fundo"></canvas>
+
 <div class="container">
-    <h1>Bem-vindo ao Mini App!</h1>
-    <p>Gerencie seus nomes de forma simples e divertida 😎</p>
-    <button onclick="entrar()">Entrar</button>
+<h1 id="texto">Bem-vindo ao Jogo de Plataforma!</h1>
+<button id="entrar" onclick="entrar()">Entrar no Jogo</button>
 </div>
 
 <script>
-    function entrar() {
-        // Redireciona para a página do app
-        window.location.href = "app.html";
+function entrar(){ window.location.href="game.html"; }
+setTimeout(()=>{ document.getElementById("entrar").style.display="inline-block"; },4000);
+
+// partículas leves
+const canvas=document.getElementById("fundo");
+const ctx=canvas.getContext("2d");
+let w=canvas.width=window.innerWidth;
+let h=canvas.height=window.innerHeight;
+let particles=[];
+for(let i=0;i<80;i++){ particles.push({x:Math.random()*w,y:Math.random()*h,r:Math.random()*2+1,dx:(Math.random()-0.5)*1,dy:(Math.random()-0.5)*1}); }
+function animar(){
+    ctx.clearRect(0,0,w,h);
+    for(let p of particles){
+        ctx.beginPath();
+        ctx.arc(p.x,p.y,p.r,0,Math.PI*2);
+        ctx.fillStyle="rgba(255,255,255,0.7)";
+        ctx.fill();
+        p.x+=p.dx; p.y+=p.dy;
+        if(p.x<0||p.x>w)p.dx*=-1;
+        if(p.y<0||p.y>h)p.dy*=-1;
     }
+    requestAnimationFrame(animar);
+}
+animar();
+window.addEventListener('resize',()=>{ w=canvas.width=window.innerWidth; h=canvas.height=window.innerHeight; });
+
+// botão secreto: clicar no título
+document.getElementById("texto").addEventListener("click",()=>{ document.getElementById("entrar").style.display="inline-block"; });
 </script>
 
 </body>
