--- a/app.html
+++ b/app.html
@@ -3,118 +3,115 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Mini App de Nomes</title>
+<title>Jogo de Plataforma</title>
 <style>
-:root {
-    --bg: #f4f4f4; --card: #ffffff; --text:#2c3e50; --primary:#27ae60; --danger:#c0392b; --item:#ecf0f1;
-}
-body.dark { --bg:#121212; --card:#1e1e1e; --text:#f1f1f1; --primary:#2ecc71; --danger:#e74c3c; --item:#2a2a2a; }
-body { margin:0; font-family:Arial,sans-serif; background:var(--bg); color:var(--text); transition:all 0.3s; }
-header { background:var(--card); padding:20px; text-align:center; position:relative; }
-.toggle-theme { position:absolute; right:20px; top:20px; cursor:pointer; font-size:22px; }
-main { padding:20px; padding-bottom:140px; max-width:500px; margin:auto; }
-.card { background:var(--card); padding:20px; border-radius:10px; box-shadow:0 0 10px rgba(0,0,0,0.1); transition:background 0.3s; }
-input[type="text"] { width:100%; padding:10px; font-size:16px; margin-bottom:10px; border-radius:5px; border:none; outline:none; }
-button { width:100%; background:var(--primary); color:white; border:none; padding:10px; border-radius:5px; font-size:16px; cursor:pointer; margin-bottom:10px; }
-.limpar { background:var(--danger); }
-ul { list-style:none; padding:0; margin-top:15px; }
-li { background:var(--item); padding:10px; margin-bottom:8px; border-radius:5px; font-weight:bold; opacity:0; transform:translateY(15px); transition:all 0.4s ease; }
-li.mostrar { opacity:1; transform:translateY(0); }
-.tema-card { margin-top:20px; }
-.tema-card label { display:flex; justify-content:space-between; align-items:center; margin-bottom:10px; font-weight:bold; }
-footer { background:var(--card); text-align:center; padding:15px; position:fixed; bottom:0; width:100%; }
+:root { --bg:#f4f4f4; --player:#27ae60; --platform:#34495e; --text:#2c3e50; }
+body.dark { --bg:#121212; --player:#2ecc71; --platform:#1e1e1e; --text:#f1f1f1; }
+body { margin:0; font-family:Arial,sans-serif; background:var(--bg); color:var(--text); display:flex; flex-direction:column; align-items:center; transition:all 0.3s; }
+header { width:100%; text-align:center; padding:15px; background:var(--platform); color:white; position:relative; }
+.toggle-theme { position:absolute; right:20px; top:15px; cursor:pointer; font-size:22px; }
+canvas { background:var(--bg); display:block; margin:20px auto; border:2px solid var(--text); }
+button { padding:10px 20px; margin-top:10px; cursor:pointer; border:none; border-radius:5px; background:#ff6600; color:white; font-weight:bold; }
 </style>
 </head>
 <body>
 
 <header>
-    <h1>Mini App de Nomes</h1>
+    <h1>Jogo de Plataforma</h1>
     <div class="toggle-theme" id="toggleTheme">🌙</div>
 </header>
 
-<main>
-<div class="card">
-    <input type="text" id="inputNome" placeholder="Digite um nome">
-    <button id="btnAdicionar">Adicionar Nome</button>
-    <button class="limpar" id="btnLimpar">Limpar Tudo</button>
-    <ul id="listaNomes"></ul>
-
-    <div class="tema-card">
-        <h3>🎨 Cores do Tema</h3>
-        <label>Cor principal<input type="color" id="corPrimary"></label>
-        <label>Fundo<input type="color" id="corBg"></label>
-        <label>Card<input type="color" id="corCard"></label>
-    </div>
-</div>
-</main>
-
-<footer>Mini App - 2026</footer>
+<canvas id="gameCanvas" width="600" height="400"></canvas>
+<button onclick="voltar()">Voltar à Landing Page</button>
 
 <script>
-const input=document.getElementById("inputNome");
-const btnAdicionar=document.getElementById("btnAdicionar");
-const btnLimpar=document.getElementById("btnLimpar");
-const lista=document.getElementById("listaNomes");
-const toggleTheme=document.getElementById("toggleTheme");
-const corPrimary=document.getElementById("corPrimary");
-const corBg=document.getElementById("corBg");
-const corCard=document.getElementById("corCard");
+const canvas=document.getElementById("gameCanvas");
+const ctx=canvas.getContext("2d");
+let w=canvas.width, h=canvas.height;
 
-let nomes=JSON.parse(localStorage.getItem("nomes"))||[];
-let tema=JSON.parse(localStorage.getItem("temaCores"))||{primary:"#27ae60",bg:"#f4f4f4",card:"#ffffff"};
-let modo=localStorage.getItem("tema")||"light";
+// jogador
+let player={x:50, y:h-60, w:30, h:30, dy:0, grounded:false};
 
-function aplicarTema(){
-    document.documentElement.style.setProperty("--primary",tema.primary);
-    document.documentElement.style.setProperty("--bg",tema.bg);
-    document.documentElement.style.setProperty("--card",tema.card);
-    corPrimary.value=tema.primary;
-    corBg.value=tema.bg;
-    corCard.value=tema.card;
-    localStorage.setItem("temaCores",JSON.stringify(tema));
-    if(modo==="dark") document.body.classList.add("dark");
-    else document.body.classList.remove("dark");
-    toggleTheme.textContent=modo==="dark"?"☀️":"🌙";
-}
+// plataformas
+let platforms=[
+    {x:0, y:h-20, w:w, h:20},
+    {x:100, y:h-100, w:100, h:10},
+    {x:300, y:h-150, w:150, h:10},
+    {x:500, y:h-200, w:80, h:10}
+];
 
-function salvarNomes(){ localStorage.setItem("nomes",JSON.stringify(nomes)); }
+// física
+const gravity=0.8;
+const speed=4;
+const jump=15;
+let keys={};
 
-function renderizar(){
-    lista.innerHTML="";
-    nomes.forEach(nome=>{
-        const li=document.createElement("li");
-        li.textContent=nome;
-        lista.appendChild(li);
-        requestAnimationFrame(()=>{ li.classList.add("mostrar"); });
+// pontuação
+let score=0;
+let highScore=localStorage.getItem("highScore")||0;
+
+// loop principal
+function gameLoop(){
+    ctx.clearRect(0,0,w,h);
+
+    // plataformas
+    ctx.fillStyle="var(--platform)";
+    platforms.forEach(p=>{ ctx.fillRect(p.x,p.y,p.w,p.h); });
+
+    // jogador
+    player.dy+=gravity;
+    player.y+=player.dy;
+
+    // colisão com plataformas
+    player.grounded=false;
+    platforms.forEach(p=>{
+        if(player.x< p.x + p.w && player.x + player.w > p.x &&
+           player.y< p.y + p.h && player.y + player.h > p.y && player.dy>=0){
+            player.y=p.y - player.h;
+            player.dy=0;
+            player.grounded=true;
+        }
     });
+
+    // movimento horizontal
+    if(keys["ArrowLeft"]||keys["a"]) player.x-=speed;
+    if(keys["ArrowRight"]||keys["d"]) player.x+=speed;
+
+    // limites
+    if(player.x<0) player.x=0;
+    if(player.x+w>canvas.width) player.x=canvas.width-player.w;
+    if(player.y>canvas.height){ player.y=h-60; score=0; }
+
+    // desenhar jogador
+    ctx.fillStyle="var(--player)";
+    ctx.fillRect(player.x,player.y,player.w,player.h);
+
+    // pontuação
+    ctx.fillStyle="var(--text)";
+    ctx.font="18px Arial";
+    ctx.fillText("Pontuação: "+score,10,20);
+    ctx.fillText("Recorde: "+highScore,10,40);
+
+    requestAnimationFrame(gameLoop);
 }
 
-btnAdicionar.addEventListener("click",()=>{
-    const nome=input.value.trim();
-    if(!nome)return;
-    nomes.push(nome);
-    salvarNomes();
-    renderizar();
-    input.value="";
-    input.focus();
+document.addEventListener("keydown",e=>{
+    keys[e.key]=true;
+    if((e.key=="ArrowUp"||e.key=="w") && player.grounded){ player.dy=-jump; score++; if(score>highScore){ highScore=score; localStorage.setItem("highScore",highScore); } }
 });
+document.addEventListener("keyup",e=>{ keys[e.key]=false; });
 
-btnLimpar.addEventListener("click",()=>{
-    if(confirm("Deseja apagar todos os nomes?")){
-        nomes=[];
-        salvarNomes();
-        renderizar();
-    }
-});
+gameLoop();
 
-corPrimary.addEventListener("input",e=>{ tema.primary=e.target.value; aplicarTema(); });
-corBg.addEventListener("input",e=>{ tema.bg=e.target.value; aplicarTema(); });
-corCard.addEventListener("input",e=>{ tema.card=e.target.value; aplicarTema(); });
+// botão voltar
+function voltar(){ window.location.href="index.html"; }
 
+// tema
+const toggleTheme=document.getElementById("toggleTheme");
+let modo=localStorage.getItem("tema")||"light";
+function aplicarTema(){ if(modo==="dark") document.body.classList.add("dark"); else document.body.classList.remove("dark"); toggleTheme.textContent=modo==="dark"?"☀️":"🌙"; localStorage.setItem("tema",modo);}
 toggleTheme.addEventListener("click",()=>{ modo=modo==="light"?"dark":"light"; aplicarTema(); });
-
 aplicarTema();
-renderizar();
 </script>
 
 </body>
