--- a/index.html
+++ b/index.html
@@ -6,21 +6,68 @@
 <title>Bem-vindo ao Jogo de Plataforma</title>
 <style>
 * { margin:0; padding:0; box-sizing:border-box; }
-body, html { width:100%; height:100%; font-family:Arial,sans-serif; overflow:hidden; background:#121212; color:white; display:flex; justify-content:center; align-items:center; position:relative; }
+
+body, html {
+    width:100%; height:100%;
+    font-family: Arial, Helvetica, sans-serif;
+    overflow:hidden;
+    background:#121212;
+    color:white;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    position:relative;
+}
 
 canvas { position:absolute; top:0; left:0; width:100%; height:100%; z-index:0; }
 
-.container { position:relative; z-index:1; text-align:center; }
+.container {
+    position:relative;
+    z-index:1;
+    text-align:center;
+    padding:20px;
+}
 
-h1 { font-size:3rem; margin-bottom:20px; overflow:hidden; border-right:.15em solid orange; white-space:nowrap; animation: typing 3s steps(30,end), blink .75s step-end infinite; }
+h1 {
+    font-size:2.5rem;
+    margin-bottom:20px;
+    overflow:hidden;
+    border-right:.15em solid orange;
+    white-space:nowrap;
+    animation: typing 3s steps(30,end), blink .75s step-end infinite;
+}
 
-#entrar { display:none; margin-top:20px; padding:12px 30px; font-size:18px; border:none; border-radius:8px; background:#ff6600; color:white; cursor:pointer; font-weight:bold; box-shadow:0 0 10px #ff6600,0 0 20px #ff6600; animation:pulse 1.5s infinite alternate; }
+/* Botão oculto */
+#entrar {
+    display:none;
+    margin-top:20px;
+    padding:12px 25px;
+    font-size:18px;
+    border:none;
+    border-radius:8px;
+    background:#ff6600;
+    color:white;
+    cursor:pointer;
+    font-weight:bold;
+    box-shadow:0 0 10px #ff6600,0 0 20px #ff6600;
+    animation:pulse 1.5s infinite alternate;
+}
 
-#entrar:hover { transform:scale(1.05); box-shadow:0 0 20px #ff9933,0 0 30px #ff9933; }
+#entrar:hover {
+    transform:scale(1.05);
+    box-shadow:0 0 20px #ff9933,0 0 30px #ff9933;
+}
 
+/* Animações */
 @keyframes typing { from {width:0;} to {width:100%;} }
 @keyframes blink { 50% { border-color:transparent; } }
 @keyframes pulse { from { box-shadow:0 0 10px #ff6600,0 0 20px #ff6600; } to { box-shadow:0 0 20px #ff9933,0 0 30px #ff9933; } }
+
+/* Responsividade */
+@media(max-width:600px){
+    h1 { font-size:2rem; }
+    #entrar { font-size:16px; padding:10px 20px; }
+}
 </style>
 </head>
 <body>
@@ -28,8 +75,8 @@ h1 { font-size:3rem; margin-bottom:20px; overflow:hidden; border-right:.15em sol
 <canvas id="fundo"></canvas>
 
 <div class="container">
-<h1 id="texto">Bem-vindo ao Jogo de Plataforma!</h1>
-<button id="entrar" onclick="entrar()">Entrar no Jogo</button>
+    <h1 id="texto">Bem-vindo ao Jogo de Plataforma!</h1>
+    <button id="entrar" onclick="entrar()">Entrar no Jogo</button>
 </div>
 
 <script>
